# VNEC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_vnec.sh
cmake/: OpenSpBModule.cmake  OpenSpBUtil.cmake
data/: Makefile  convert.mk  converter.cpp  link.mk  networkrepo.mk  ufl.mk
data/correctness/common/: Makefile
data/correctness/common/ak2010/: Makefile
data/correctness/common/coAuthorsDBLP/: Makefile
data/correctness/common/delaunay_n13/: Makefile
data/correctness/common/delaunay_n21/: Makefile
data/graph/: Makefile
data/graph/2cubes_sphere/: Makefile
data/graph/3Dspectralwave/: Makefile
data/graph/G43/: Makefile
data/graph/GAP-kron/: Makefile
data/graph/GAP-twitter/: Makefile
data/graph/GAP-web/: Makefile
data/graph/Journals/: Makefile
data/graph/PFlow_742/: Makefile
data/graph/SiO2/: Makefile
data/graph/TSOPF_FS_b300_c2/: Makefile
data/graph/TSOPF_RS_b2383/: Makefile
data/graph/adaptive/: Makefile
data/graph/af_shell10/: Makefile
data/graph/ak2010/: Makefile
data/graph/amazon-2008/: Makefile
data/graph/amazon0312/: Makefile
data/graph/as-Skitter/: Makefile
data/graph/bbmat/: Makefile
data/graph/belgium_osm/: Makefile
data/graph/cage12/: Makefile
data/graph/cage15/: Makefile
data/graph/cell1/: Makefile
data/graph/cit-Patents/: Makefile
data/graph/cnr-2000/: Makefile
data/graph/coAuthorsCiteseer/: Makefile
data/graph/coAuthorsDBLP/: Makefile
data/graph/coPapersCiteseer/: Makefile
data/graph/coPapersDBLP/: Makefile
data/graph/com-Friendster/: Makefile
data/graph/com-Orkut/: Makefile
data/graph/com-Youtube/: Makefile
data/graph/consph/: Makefile
data/graph/crankseg_2/: Makefile
data/graph/delaunay_n13/: Makefile
data/graph/delaunay_n21/: Makefile
data/graph/delaunay_n24/: Makefile
data/graph/dielFilterV2clx/: Makefile
data/graph/eu-2005/: Makefile
data/graph/fem_hifreq_circuit/: Makefile
data/graph/germany_osm/: Makefile
data/graph/grb_ppt/: Makefile  grb_ppt.mtx
data/graph/gsm_106857/: Makefile
data/graph/gupta3/: Makefile
data/graph/higgs-twitter/: Makefile
data/graph/hollywood-2009/: Makefile
data/graph/hugebubbles-00010/: Makefile
data/graph/hugetrace-00020/: Makefile
data/graph/human_gene1/: Makefile
data/graph/human_gene2/: Makefile
data/graph/indochina-2004/: Makefile
data/graph/karate/: Makefile
data/graph/kron_g500-logn19/: Makefile
data/graph/kron_g500-logn21/: Makefile
data/graph/lhr71/: Makefile
data/graph/ljournal-2008/: Makefile
data/graph/mouse_gene/: Makefile
data/graph/nd12k/: Makefile
data/graph/p2p-Gnutella25/: Makefile
data/graph/pdb1HYS/: Makefile
data/graph/pdf_test/: Makefile  pdf_test.mtx
data/graph/pwtk/: Makefile
data/graph/rajat31/: Makefile
data/graph/rgg_n_2_24_s0/: Makefile
data/graph/roadNet-CA/: Makefile
data/graph/road_central/: Makefile
data/graph/road_usa/: Makefile
data/graph/ship_003/: Makefile
data/graph/sk-2005/: Makefile
data/graph/soc-LiveJournal1/: Makefile
data/graph/soc-orkut/: Makefile
data/graph/soc-sign-Slashdot081106/: Makefile
data/graph/soc-sign-Slashdot090216/: Makefile
data/graph/soc-sign-Slashdot090221/: Makefile
data/graph/soc-sign-epinions/: Makefile
data/graph/twitter7/: Makefile
data/graph/viscorocks/: Makefile
data/graph/water_tank/: Makefile
data/graph/wb-edu/: Makefile
data/graph/web-Stanford/: Makefile
data/graph/webbase-1M/: Makefile
data/graph/west0067/: Makefile
data/graph/wiki-topcats/: Makefile
data/performance/SpMV/: Makefile
data/performance/SpMV/belgium_osm/: Makefile
data/performance/SpMV/roadNet-CA/: Makefile
data/performance/SpMV/soc-sign-epinions/: Makefile
data/performance/common/: Makefile  readme.md
data/performance/common/G43/: Makefile
data/performance/common/Journals/: Makefile
data/performance/common/cit-Patents/: Makefile
data/performance/common/coAuthorsCiteseer/: Makefile
data/performance/common/coAuthorsDBLP/: Makefile
data/performance/common/com-Orkut/: Makefile
data/performance/common/delaunay_n24/: Makefile
data/performance/common/hollywood-2009/: Makefile
data/performance/common/indochina-2004/: Makefile
data/performance/common/rgg_n_2_24_s0/: Makefile
data/performance/common/road_central/: Makefile
data/performance/common/road_usa/: Makefile
data/performance/common/ship_003/: Makefile
data/performance/common/soc-LiveJournal1/: Makefile
data/performance/common/soc-orkut/: Makefile
include/: OpenSparseBLAS.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: SpB_Alloc.h  SpB_Debug.h  SpB_Error.h  SpB_Global.h  SpB_MACRO.h  SpB_Matrix.h  SpB_Matrix_CSC_or_CSR.h  SpB_Scalar.h  SpB_Semiring.h  SpB_Type.h  SpB_Vector.h  SpB_Vector_Dense.h  SpB_Vector_Sparse.h  SpB_Warning.h  SpB_error.h  SpB_hello.h
src/core/src/: SpB_Alloc.c  SpB_Debug.c  SpB_Error.c  SpB_Global.c  SpB_Global_Option_set.c  SpB_Matrix.c  SpB_Matrix_CSC_or_CSR.c  SpB_Scalar.c  SpB_Vector.c  SpB_Vector.cpp  SpB_Vector_Dense.c  SpB_Vector_Sparse.c  SpB_Warning.c  SpB_error.c  SpB_finalize.c  SpB_init.c
src/core/test/: 00_SpB_Error_Warrning_test.cpp  01_set_and_extr_demo.cpp  02_matrix_build_demo.cpp  SpB_Warrning_Error_test.c  SpB_Warrning_Error_test.h
src/operation/: CMakeLists.txt
src/operation/include/: SpB_mxv.h
src/operation/src/: SpB_mxv.c  ird_calc.c  spmv_vnec_D_for_mxv.c  spmv_vnec_L_for_mxv.c  spmv_vnec_S_for_mxv.c  spmv_vnec_common.c
src/operation/test/: test_spmv_vnec.cpp  test_spmv_vnec.hpp
utilities/: builder.hpp  command_line.h  env.h  env.h.in  graph.hpp  platform_atomics.h  pvector.h  read_matrix.hpp  reader.hpp  readme.md  run_gtest.cpp  run_gtest.hpp  timer.h  util.cpp  util.h  util.hpp  writer.hpp
